# rush

./: .gitattributes  .rush  Cargo.toml  LICENSE  PUBLISHING.md  README.md  ROADMAP.md  VERSION_MANAGEMENT.md
.github/workflows/: ci.yml  npm-publish.yml  package-managers.yml  release.yml  version-sync.yml
Formula/: rush-build.rb  rush-cli.rb  taskrush.rb
docs/examples/: interactive-mode.md
docs/examples/plugin-slack-notify/: Cargo.toml  plugin.toml
docs/examples/plugin-slack-notify/src/: lib.rs
docs/rfc/: 0001-plugin-system.md
editors/: README.md
editors/sublime/: TaskRush.sublime-syntax
editors/vim/: rush.vim
examples/: README.md
examples/javascript/: .rush
examples/monorepo/: .rush
examples/node-project/: .rush
examples/python-api/: .rush
examples/react-app/: .rush
examples/rust/: .rush
examples/rust-cli/: .rush
npm-package/: .npmignore  README.md  index.js  install.js  package.json  taskrush-0.2.0.tgz  taskrush-0.2.1.tgz
scripts/: check-versions.sh  sync-versions.sh
src/: cache.rs  config.rs  executor.rs  graph.rs  main.rs
vscode-extension/: README.md  language-configuration.json  package.json
vscode-extension/schemas/: rush-schema.json
vscode-extension/snippets/: rush.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: rush.tmLanguage.json
