[package]
name = "rush"
version = "0.1.0"
edition = "2024"
description = "A modern task runner with parallel execution and intelligent caching"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
anyhow = "1.0"
