[package]
name = "rush-build"
version = "0.1.0"
edition = "2024"
description = "A modern task runner with parallel execution and intelligent caching"
license = "MIT"
repository = "https://github.com/iPeluwa/rush"
readme = "README.md"
keywords = ["task-runner", "build", "automation", "parallel", "caching"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
anyhow = "1.0"
futures = "0.3"
indicatif = "0.17"

[[bin]]
name = "rush-build"
path = "src/main.rs"

[[bin]]
name = "rush"
path = "src/main.rs"
