[package]
name = "taskrush"
version = "0.2.6"
edition = "2021"
rust-version = "1.82"
description = "A modern task runner with parallel execution and intelligent caching"
license = "MIT"
repository = "https://github.com/iPeluwa/rush"
readme = "README.md"
keywords = ["task-runner", "build", "automation", "parallel", "caching"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
anyhow = "1.0"
futures = "0.3"
indicatif = "0.17"
notify = "6.0"
regex = "1.0"

[[bin]]
name = "taskrush"
path = "src/main.rs"

[[bin]]
name = "rush"
path = "src/main.rs"
