[package]
name = "taskrush-plugin-slack-notify"
version = "1.0.0"
edition = "2021"
description = "TaskRush plugin for Slack notifications"
license = "MIT"

[lib]
crate-type = ["cdylib"]  # For dynamic loading

[dependencies]
taskrush-plugin-api = "0.3.0"  # Future plugin API crate
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[package.metadata.taskrush-plugin]
type = "native"
permissions = [
    { network = { hosts = ["hooks.slack.com"] } },
    { environment = { vars = ["SLACK_WEBHOOK"] } }
]
